--- a/Missions/7. Advanced Python and Computer Science/1. Data Structures and Algorithms/2. Algorithms/Algorithms.ipynb
+++ b/Missions/7. Advanced Python and Computer Science/1. Data Structures and Algorithms/2. Algorithms/Algorithms.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You'll be working with nba, a data set containing the names and ages of National Basketball Association (NBA) players from 2013, along with some statistics."
+    "We'll be working with nba, a data set containing the names and ages of National Basketball Association (NBA) players from 2013, along with some statistics."
    ]
   },
   {
